--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -169,16 +169,6 @@ function closeNav() {
     <li>Mark your chosen numbers <b>only</b> with a vertical line.</li>
     <li>If an error is made, mark the "<b>void</b>" to indicate that board is cancelled.</li>
     </ul>
-    <p>Increase your chances to win with different <a href="#" style="color:#2d89ef; text-decoration:none">System Play / System Bet</a>. Which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
-    <ul>
-    <li>Mark your chosen system under the "<b>SYS</b>" (keep it blank if you will play standard 6-number combination).</li>
-    </ul>
-    <p>In just one visit in a lotto outlet, you can bet in advance for up to six (6) consecutive draws.<br>Example: If you mark "6 Draws" on your playslip, you will pay ₱120, that is for the current draw and the next five (5) consecutive draws.</p>
-    <ul>
-    <li>Mark how many draw you want to play under "<b>DRAW</b>" on your playslip.</li>
-    </ul>
-    <p>The cut-off time for playing Ultra Lotto 6/58 is 8:00 p.m.</p>
-    <p>To play this game, you must be 18 years old or above.</p>
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
@@ -189,6 +179,16 @@ function closeNav() {
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <p>Increase your chances to win with different <a href="#" style="color:#2d89ef; text-decoration:none">System Play / System Bet</a>. Which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
+    <ul>
+    <li>Mark your chosen system under the "<b>SYS</b>" (keep it blank if you will play standard 6-number combination).</li>
+    </ul>
+    <p>In just one visit in a lotto outlet, you can bet in advance for up to six (6) consecutive draws.<br>Example: If you mark "6 Draws" on your playslip, you will pay ₱120, that is for the current draw and the next five (5) consecutive draws.</p>
+    <ul>
+    <li>Mark how many draw you want to play under "<b>DRAW</b>" on your playslip.</li>
+    </ul>
+    <p>The cut-off time for playing Ultra Lotto 6/58 is 8:00 p.m.</p>
+    <p>To play this game, you must be 18 years old or above.</p>	
     <h3 style="color:#4B77BE"><strong>How much does it cost?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
     <table style="border-collapse: collapse; width:100%; max-width:500px; text-align:left;">
     <tr>
@@ -228,6 +228,16 @@ function closeNav() {
     <td>&#8369;18,480</td>
     </tr>
     </table>
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h2 style="color:#4B77BE"><strong>How to win in Ultra Lotto 6/58?<span class="htp"> How to play UltraLotto 6/58</span></strong></h2>
     <p>To win the jackpot, you need to match correctly all six of the winning numbers in any order. You can also win prizes by getting any 5, 4 or 3 numbers of the winning 6-number combination, in any order.</p>
     <h3 style="color:#4B77BE"><strong>How much can I win?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
@@ -235,7 +245,16 @@ function closeNav() {
     <h3 style="color:#4B77BE"><strong>What if there are more than one jackpot winner?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
     <p>Ultra Lotto 6/58 is a pari-mutuel game. Meaning if there are more than one jackpot prize winner, the prize money will be divided among the winners equally.</p>
     <p>When there is no jackpot winner, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
-    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <h3 style="color:#4B77BE"><strong>Where can I see the Ultra Lotto 6/58 results?<span class="htp"> How to play UltraLotto 6/58</span></strong></h3>
     <p>The draws is televise in PTV 4. You can also find the official and verified Ultra Lotto 6/58 results right here on the LottoInfo.ph website. Just head to the Ultra Lotto 6/58 draw results page. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
     <p>The draws are held at 9:00 p.m. every Tuesdays, fridays and sundays.</p>
