--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Dec1">December 1, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">3</span><span class="ball text-xl">52</span><span class="ball text-xl">30</span><span class="ball text-xl">17</span><span class="ball text-xl">8</span><span class="ball text-xl">1</span></p>
+     <h4>Jackpot Prize : &#8369;113,013,024</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
