--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -167,7 +167,7 @@ function closeNav() {
 	</tr>
 	<tr>
 	<td class="yf"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">5</span>&nbsp;&nbsp;<span class="ball text-xl">15</span></td>
 	</tr>
 	</table>
 	</div>
