--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -147,7 +147,16 @@ function openNav() {
 
 <div itemscope itemtype="http://schema.org/hatom" class="row" style="max-width:1200px; margin:auto">
 	<div itemscope itemtype="http://schema.org/hentry" class="main">
-	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<h1 class="capital" style="color:#4B77BE"><span itemprop="entry-title"><strong>Results and winnings</strong></span></h1>
 	<img src="images/Results.png" alt="PCSO Lotto Results" class="hide-m hide-l" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
 	<br>
@@ -215,7 +224,17 @@ function openNav() {
 	<br>
 	</div>
 	</div>
-
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		
 	<!-- MEGA LOTTO 6/45 -->
 
 	<div class="row">
@@ -302,7 +321,17 @@ function openNav() {
 	<br>
 	</div>
 	</div>
-
+		
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<!-- EZ 2 LOTTO -->
 
 	<div class="row">
@@ -508,14 +537,18 @@ function openNav() {
  <p><a href="">Contact Us</a></p>
 </div>
 </div>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color:#EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>	
-	<script type="text/javascript">
-var infolinks_pid = 3052187;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+</div>		
 </body>
 </html>
