--- a/Swertres-results/Swertres-December-2017.html
+++ b/Swertres-results/Swertres-December-2017.html
@@ -11,6 +11,8 @@
 <meta name="news_keywords" content="Swertres result, Swertres result, Swertres December 2017" />
 <link rel="original-source" href="https://lottoinfo.ph/Swertres-results/Swertres-December-2017" />
 <link rel="canonical" href="https://lottoinfo.ph/Swertres-results/Swertres-December-2017" /> 
+	<link rel="prev" href="https://lottoinfo.ph/Swertres-results/December-1-2017.html">
+<link rel="next" href="https://lottoinfo.ph/Swertres-results/November-30-2017.html">
 <script type="application/ld+json"> {"@context": "http://schema.org", "@type": "WPHeader", "headline": "Swertres Results December 2017", "alternativeHeadline": "PCSO Swertres December 2017 Results"}</script>
 
 <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
