--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -159,7 +159,7 @@ function closeNav() {
 	</thead>
 	<tr>
 	<td class="yf"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">14</span>&nbsp;&nbsp;<span class="ball text-xl">30</span></td>
 	</tr>
 	<tr>
 	<td class="yf"><b>4 PM</b></td>
