--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -84,7 +84,16 @@ function openNav() {
 	</nav>
 <div class="row" style="max-width:1200px; margin:auto">
 	<div class="main">
-	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<h1 class="capital" style="color:#4B77BE"><strong>Swertres Result Today</strong></span></h1>
 	<img src="../images/Swertres-result.png" alt="PCSO Swertres Lotto Result" class="hide-m hide-l" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
 	<br>
@@ -187,6 +196,17 @@ function openNav() {
     </div>
     
   	<div class="side">
+		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	<div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
 	<div>
 	<h3 style="color:#4B77BE;">You May Also Like</h3>
@@ -215,7 +235,16 @@ function openNav() {
 	<script type=application/ld+json>{"@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": {"@type": "EntryPoint",
 	"url": "https://lottoinfo.ph/results-and-winnings",
 	"urlTemplate": "https://lottoinfo.ph/results-and-winnings"}}</script>
-	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
@@ -266,7 +295,16 @@ function openNav() {
  <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Lotto Info Philippines</b></h4>
  <p><a href="mailto:hello@lottoinfo.ph">Contact Us</a></p>
 </div></div>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color:#EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
 </div>
