--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -300,7 +300,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">0</span>&nbsp;&nbsp;<span class="ball text-xl">4</span>&nbsp;&nbsp;<span class="ball text-xl">2</span></td>
 	</tr>
 
 	<!-- SWERTRES 4 PM -->
@@ -355,7 +355,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>11 AM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">6</span>&nbsp;&nbsp;<span class="ball text-xl">26</span></td>
 	</tr>
 
 	<!-- EZ 2 - 4 PM -->
