--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -66,9 +66,8 @@ p, ul a{font-size:17px; font-family:Arial; line-height:1.5; letter-spacing:.2px;
 	<a href="javascript:void(0)" style="position:absolute; top:0; right:25px; font-size:36px; margin-left:50px;" onclick="closeNav()">&times;</a>
 	<a href="../Index.html">Home</a>
 	<a href="../pcso-lotto-and-games.html">Lotto & Games</a>
-	<a href="../results-and-winnings.html">Results & Winnings</a>
-	<a href="../results-and-winnings/Swertres-results.html" style="margin-left:20px;">PCSO Swertres</a>
-	<a href="Swertres-December-2017.html" style="border:1px solid #f2f2f2; border-radius:6px; margin-right:20px; margin-left:20px; font-size:20px">&#x276f;&nbsp;&nbsp;December 2017</a>
+	<a href="../results-and-winnings.html">Results & Winnings</a>	
+	<a href="Swertres-results.html" style="border:1px solid #f2f2f2; border-radius:6px; margin-right:20px; margin-left:20px; font-size:20px">&#x276f;&nbsp;&nbsp;PCSO Swertres</a>
 	<a href="#">FAQs</a>
 	</div>
 	
