--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+     <input id="Dec4" type="radio" name="t">
+     <label for="Dec4">December 4, 2017</label>
+     <div class="tab-content">
+     <div class="jackpot">
+     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
+     <h4>Jackpot Prize : &#8369;</h4>
+     <h4>Number of Winners : ?</h4>
+     </div>
+     </div>
+     </div>
+	     <div class="tab blue">
      <input id="Dec1" type="radio" name="t">
      <label for="Dec1">December 1, 2017</label>
      <div class="tab-content">
