--- a/results-and-winnings/Grand-lotto-6-55-results.html
+++ b/results-and-winnings/Grand-lotto-6-55-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Dec4">December 4, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">33</span><span class="ball text-xl">22</span><span class="ball text-xl">8</span><span class="ball text-xl">42</span><span class="ball text-xl">1</span><span class="ball text-xl">10</span></p>
+     <h4>Jackpot Prize : &#8369;29,700,000</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
