--- a/results-and-winnings/Mega-lotto-6-45-results.html
+++ b/results-and-winnings/Mega-lotto-6-45-results.html
@@ -147,9 +147,9 @@ function closeNav() {
      <label for="Dec4">December 4, 2017</label>
      <div class="tab-content">
      <div class="jackpot">
-     <p style="text-align:center"><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span><span class="ball text-xl">?</span></p>
-     <h4>Jackpot Prize : &#8369;</h4>
-     <h4>Number of Winners : ?</h4>
+     <p style="text-align:center"><span class="ball text-xl">44</span><span class="ball text-xl">8</span><span class="ball text-xl">6</span><span class="ball text-xl">30</span><span class="ball text-xl">3</span><span class="ball text-xl">18</span></p>
+     <h4>Jackpot Prize : &#8369;64,342,544</h4>
+     <h4>Number of Winners : 0</h4>
      </div>
      </div>
      </div>
