--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -169,6 +169,7 @@ function closeNav() {
     <li>Mark your chosen numbers <b>only</b> with a vertical line.</li>
     <li>If an error is made, mark the "<b>void</b>" to indicate that board is cancelled.</li>
     </ul>
+	  <div style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%;">
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; text-align:center;"
@@ -178,7 +179,7 @@ function closeNav() {
      data-ad-slot="5525927185"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
     <p>Increase your chances to win with different <a href="#" style="color:#2d89ef; text-decoration:none">System Play / System Bet</a>. Which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
     <ul>
     <li>Mark your chosen system under the "<b>SYS</b>" (keep it blank if you will play standard 6-number combination).</li>
