--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -228,9 +228,10 @@ function closeNav() {
     <td>&#8369;18,480</td>
     </tr>
     </table>
+	  <br>
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
+     style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
      data-ad-layout="in-article"
      data-ad-format="fluid"
      data-ad-client="ca-pub-8489405167836126"
@@ -247,7 +248,7 @@ function closeNav() {
     <p>When there is no jackpot winner, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
+     style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
      data-ad-layout="in-article"
      data-ad-format="fluid"
      data-ad-client="ca-pub-8489405167836126"
@@ -270,10 +271,11 @@ function closeNav() {
   <div class="side">
 	
  <img src="../images/6-58-how.png" alt="How to play PCSO Ultra Lotto 6/58" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
+	  <br>
  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
@@ -421,7 +423,7 @@ function closeNav() {
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%;"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
