--- a/pcso-lotto-and-games/Ultra-lotto-6-58.html
+++ b/pcso-lotto-and-games/Ultra-lotto-6-58.html
@@ -148,7 +148,7 @@ function closeNav() {
 	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
@@ -270,8 +270,7 @@ function closeNav() {
     
   <div class="side">
 	
- <img src="../images/6-58-how.png" alt="How to play PCSO Ultra Lotto 6/58" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-	  <br>
+ <img src="../images/6-58-how.png" alt="How to play PCSO Ultra Lotto 6/58" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">	
  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
@@ -281,7 +280,7 @@ function closeNav() {
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script><br>
 	  <div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
 	<h3 style="color:#4B77BE;">You May Also Like</h3>
 	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
