--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -146,6 +146,18 @@ function closeNav() {
 <div class="row" style="max-width:1200px; margin:auto">
   
   <div class="main">
+	  
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
   	<a href="../Index.html" class="ff" style="margin-left:2px; font-size:10px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
   	<a href="../pcso-lotto-and-games.html" class="ff" style="font-size:10px; color:#626567; text-decoration:none; display:inline-block">Lotto & Games /</a>
   	<a href="Grand-lotto-6-55.html" class="ff" style="font-size:10px; color:#626567; text-decoration: none; display:inline-block">Grand Lotto 6/55</a>
@@ -160,6 +172,18 @@ function closeNav() {
    	<li>Mark your chosen numbers <b>only</b> with a vertical line.</li>
    	<li>If an error is made, mark the "<b>void</b>" to indicate that board is cancelled.</li>
    	</ul>
+	  
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-layout="in-article"
+	data-ad-format="fluid"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="5525927185"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
    	<p>You can also play the different <a href="#" style="color:#2d89ef; text-decoration:none">System Play / System Bet</a>, which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
    	<ul>
    	<li>Mark your chosen system under the "<b>SYS</b>" (keep it blank if you will play standard 6-number combination).</li>
@@ -208,7 +232,19 @@ function closeNav() {
    	<td>System 12</td>
    	<td>&#8369;18,480</td>
    	</tr>
-   	</table>
+   	</table><br>
+	  
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-layout="in-article"
+	data-ad-format="fluid"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="5525927185"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
    	<h2><strong><font color="#4B77BE">How to win in Grand Lotto 6/55?</font></strong></h2>
    	<p>To hit the jackpot you'll need to match all six of the winning numbers in any order. Don't be discouraged when you don't get the jackpot. Because you can still win prizes by getting any 3, 4 or 5 numbers of the winning 6-number combination, in any order.</p>
    	<h3><b><font color="#4B77BE">How much I can win?</font></b></h3>
@@ -218,6 +254,17 @@ function closeNav() {
    	<p>The Grand Lotto 6/55 is a pari-mutuel game. Meaning if there are more than one jackpot prize winner, the prize money will be divided equally among the winners.</p>
    	<p>If the Grand Lotto 6/55 jackpot is not won, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
    	
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-layout="in-article"
+	data-ad-format="fluid"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="5525927185"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
    	<h2><strong><font color="#4B77BE">Where can I see The Grand Lotto 6/55 results?</font></strong></h2>
    	<p>The draws is televise in PTV 4. You can also find the official and verified Grand Lotto 6/55 results right here on the LottoInfo.ph website. Just head to The Grand Lotto 6/55 draw results page. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results from there.</p>
    	<p>The draws were held every mondays, wednesdays and saturdays at 9:00 p.m. </p>
@@ -231,7 +278,20 @@ function closeNav() {
     
   <div class="side">
     <img src="../images/6-55-how.png" alt="How to play PCSO Grand Lotto 6/55" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
-  </div>
+ 
+	  <br class="hide-s">
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script><br>
+	  
+	</div>
 </div>
 
 <script type=application/ld+json>{
@@ -296,6 +356,17 @@ function closeNav() {
  }
  }</script>
 
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
@@ -351,11 +422,6 @@ function closeNav() {
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color: #EEEEEE; font-size:16px"><b>&copy; Lotto Info Philippines</b></h4>
-</div>	
-	<script type="text/javascript">
-var infolinks_pid = 3052187;
-var infolinks_wsid = 0;
-</script>
-<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+</div>		
 </body>
 </html>
