--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -102,7 +102,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, l
 .topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 16px; float:left; width:100%} .navi {float:left; width:100%; display:block; padding:8px 16px; text-align:left; border:none; outline:none; text-decoration:none;}
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
 @media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td {padding:5px 5px}
-.footer a {color:#EEEEEE; font-size:13px; text-decoration:none}
+.footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none}
 </style>
 </head>
 <body>
@@ -290,7 +290,26 @@ function closeNav() {
 	<script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
 	</script><br>
-	  
+	  <div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
+	<h3 style="color:#4B77BE;">You May Also Like</h3>
+	<p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 Result" rel="bookmark">Grand Lotto 6/55 Result</p>
+	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
+	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
+	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html" title="How To Play Super Lotto 6/49" rel="bookmark">How To Play Super Lotto 6/49</p>
+	<p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 Result" rel="bookmark">Super Lotto 6/49 Result</p>
+	<p><a href="../pcso-lotto-and-games/Mega-Lotto-6-45.html" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
+	<p><a href="../results-and-winnings.html#45Result" title="Mega Lotto 6/45 Result" rel="bookmark">Mega Lotto 6/45 Result</p>
+	<p><a href="../pcso-lotto-and-games/lotto-6-42.html" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
+	<p><a href="../results-and-winnings.html#42Result" title="Lotto 6/42 Result" rel="bookmark">Lotto 6/42 Result</p>
+	<p><a href="../pcso-lotto-and-games/6-Digit-Game.html" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
+	<p><a href="../results-and-winnings.html#6DResult" title="6 Digit Game Result" rel="bookmark">(6D) 6 Digit Game Result</p>
+	<p><a href="../pcso-lotto-and-games/4-Digit-Game.html" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
+	<p><a href="../results-and-winnings.html#4DResult" title="4 Digit Game Result" rel="bookmark">(4D) 4 Digit Game Result</p>
+	<p><a href="../pcso-lotto-and-games/Swertres.html" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
+	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
+	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
+	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
+	</div>
 	</div>
 </div>
 
