--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -156,7 +156,7 @@ function closeNav() {
 	data-ad-format="auto"></ins>
 	<script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
+	</script><br>
 	  
   	<a href="../Index.html" class="ff" style="margin-left:2px; font-size:10px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
   	<a href="../pcso-lotto-and-games.html" class="ff" style="font-size:10px; color:#626567; text-decoration:none; display:inline-block">Lotto & Games /</a>
