--- a/pcso-lotto-and-games/Super-lotto-6-49.html
+++ b/pcso-lotto-and-games/Super-lotto-6-49.html
@@ -101,7 +101,7 @@ h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} h1,h
 .topnav {overflow:hidden; background-color:#F2f2f2;} .side {float:left; width:100%; padding:16px;} .main { padding: 16px; float:left; width:100%} .navi {float:left; width:100%; display:block; padding:8px 16px; text-align:left; border:none; outline:none; text-decoration:none;}
 img {display:block; margin:auto; width:50%;} .row:after, row:before {content:""; display:table; clear:both;} @media (min-width:601px){.main{width:74.99999%}.side{width:24.99999%}.half{width:49.99999%}}
 @media (max-width: 600px){h1 {font-size:19px} h2{font-size:19px} h3{font-size:19px} h4{font-size:17px} .ftext{font-size:22px} .half{padding:0;}} .m{margin-left:6px;} .sidenav a { padding: 8px 8px 8px 32px; text-decoration: none; font-size: 25px; color:#f2f2f2; display:block; transition:0.3s;} th, td {padding:5px 5px}
-.footer a {color:#EEEEEE; font-size:13px; text-decoration:none}
+.footer a {color:#EEEEEE; font-size:13px; text-decoration:none} .MyS a {color:#2d89ef; text-decoration:none}
 </style>
 </head>
 <body>
@@ -145,6 +145,18 @@ function closeNav() {
 <div class="row" style="max-width:1200px; margin:auto">
   
   <div class="main">
+	  
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script><br>
+	  
   	<a href="../index.html" class="ff" style="margin-left:2px; font-size:10px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
   	<a href="../pcso-lotto-and-games.html" class="ff" style="font-size:10px; color:#626567; text-decoration:none; display:inline-block">Lotto & Games /</a>
   	<a href="Super-lotto-6-49.html" class="ff" style="font-size:10px; color:#626567; text-decoration: none; display:inline-block">Super Lotto 6/49</a>
@@ -161,6 +173,18 @@ function closeNav() {
     <li>Mark your chosen numbers <b>only</b> with a vertical line.</li>
     <li>If an error is made, mark the "<b>void</b>" to indicate that board is cancelled.</li>
     </ul>
+	  
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-layout="in-article"
+	data-ad-format="fluid"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="5525927185"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
     <p>Different <a href="#" style="color:#2d89ef; text-decoration:none">System Play / System Bet</a> is also available. Which you can choose 7 up to 12 numbers, and the system will automatically combine all the different possible combinations. The more number combinations you have, the better your chances to win millions!</p>
     <ul>
     <li>Mark your chosen system under the "<b>SYS</b>" (keep it blank if you will play standard 6-number combination).</li>
@@ -209,7 +233,19 @@ function closeNav() {
     <td>System 12</td>
     <td>&#8369;18,480</td>
     </tr>
-    </table>
+    </table><br>
+	  
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-layout="in-article"
+	data-ad-format="fluid"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="5525927185"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
     <h2 style="color:#4B77BE"><strong>How to win in Super Lotto 6/49?</strong></h2>
     <p>To win the Super Lotto 6/49 jackpot, you must match correctly all the six winning numbers in any order. But if you are not lucky to get the jackpot, don't be dismayed! because you still have chances to win prizes up to &#8369;70,000 by getting any 5, 4 or 3 out of the six winning numbers drawn, in any order.</p>
     <h3 style="color:#4B77BE"><strong>How much can I win?</strong></h3>
@@ -219,6 +255,17 @@ function closeNav() {
     <p>Super Lotto 6/49 is a pari-mutuel game. Meaning if there are more than one jackpot prize winner, the prize money will be divided among the winners equally.</p>
     <p>When there is no jackpot winner, said jackpot prize shall be added to the computation of jackpot prize of the next scheduled draw.</p>
     
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<ins class="adsbygoogle"
+	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-layout="in-article"
+	data-ad-format="fluid"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="5525927185"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	  
     <h3 style="color:#4B77BE"><strong>Where can I see the Super Lotto 6/49 results?</strong></h3>
     <p>The draws is televise in PTV 4. You can also find the official and verified Super Lotto 6/49 results right here on the LottoInfo.ph website. Just head to the Super Lotto 6/49 draw results page. The winning numbers are posted once the draw results have been verified and confirmed. However, we still encourage you to visit the official PCSO website if you still want to verify the game results there.</p>
     <p>Draws take place every tuesdays, thursdays and sundays at 9:00 p.m. </p>
@@ -233,6 +280,39 @@ function closeNav() {
     
   <div class="side">
     <img src="../images/6-49-how.png" alt="How to play PCSO Super Lotto 6/49" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
+	  <br class="hide-s">
+	  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script><br>
+	  
+	  <div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
+	<h3 style="color:#4B77BE;">You May Also Like</h3>
+	<p><a href="../results-and-winnings.html#49Result" title="Super Lotto 6/49 Result" rel="bookmark">Super Lotto 6/49 Result</p>
+	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html" title="How To Play Ultra Lotto 6/58" rel="bookmark">How To Play Ultra Lotto 6/58</p>
+	<p><a href="../results-and-winnings.html#58Result" title="Ultra Lotto 6/58 Result" rel="bookmark">Ultra Lotto 6/58 Result</p>
+	<p><a href="../pcso-lotto-and-games/Grand-lotto-6-55.html" title="How To Play Grand Lotto 6/55" rel="bookmark">How To Play Grand Lotto 6/55</p>
+	<p><a href="../results-and-winnings.html#55Result" title="Grand Lotto 6/55 Result" rel="bookmark">Grand Lotto 6/55 Result</p>
+	<p><a href="../pcso-lotto-and-games/Mega-Lotto-6-45.html" title="How To Play Mega Lotto 6/45" rel="bookmark">How To Play Mega Lotto 6/45</p>
+	<p><a href="../results-and-winnings.html#45Result" title="Mega Lotto 6/45 Result" rel="bookmark">Mega Lotto 6/45 Result</p>
+	<p><a href="../pcso-lotto-and-games/lotto-6-42.html" title="How To Play Lotto 6/42" rel="bookmark">How To Play Lotto 6/42</p>
+	<p><a href="../results-and-winnings.html#42Result" title="Lotto 6/42 Result" rel="bookmark">Lotto 6/42 Result</p>
+	<p><a href="../pcso-lotto-and-games/6-Digit-Game.html" title="How To Play 6 Digit Game" rel="bookmark">How To Play 6 Digit Game</p>
+	<p><a href="../results-and-winnings.html#6DResult" title="6 Digit Game Result" rel="bookmark">(6D) 6 Digit Game Result</p>
+	<p><a href="../pcso-lotto-and-games/4-Digit-Game.html" title="How To Play 4 Digit Game" rel="bookmark">How To Play 4 Digit Game</p>
+	<p><a href="../results-and-winnings.html#4DResult" title="4 Digit Game Result" rel="bookmark">(4D) 4 Digit Game Result</p>
+	<p><a href="../pcso-lotto-and-games/Swertres.html" title="How to Play Swertres" rel="bookmark">How To Play Swertres</p>
+	<p><a href="../results-and-winnings.html#SwertresResult" title="Swertres Result" rel="bookmark">Swertres Result</a></p>
+	<p><a href="../pcso-lotto-and-games/EZ-2.html" title="How To Play EZ2 Lotto" rel="bookmark">How To Play EZ2 Lotto</p>
+	<p><a href="../results-and-winnings.html#EZ2Result" title="EZ2 Lotto Result" rel="bookmark">EZ2 Lotto Result</a></p>
+	</div>
+	  
   </div>
 </div>
 
@@ -298,6 +378,17 @@ function closeNav() {
  }
  }</script>
 
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
