--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -174,7 +174,7 @@ function openNav() {
 	data-ad-format="auto"></ins>
 	<script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
-	</script>
+	</script><br>
 		
   	<div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
   	<h3 style="color:#4B77BE;">You May Also Like</h3>
