--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -147,6 +147,32 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue" style="t">
+	<input id="dec5" type="radio" name="t">
+	<label for="dec5">December 5, 2017</label>
+	<div class="tab-content">
+	<table class="table" style="box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px; width:100%">
+	<thead>
+	<tr>
+	<th>TIME OF DRAW</th>
+	<th>RESULT</th>
+	</tr>
+	</thead>
+	<tr>
+	<td class="yf"><b>11 AM</b></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	</tr>
+	<tr>
+	<td class="yf"><b>4 PM</b></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	</tr>
+	<tr>
+	<td class="yf"><b>9 PM</b></td>
+	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	</tr>
+	</table>
+	</div>
+	</div>
+	     <div class="tab blue" style="t">
 	<input id="dec4" type="radio" name="t">
 	<label for="dec4">December 4, 2017</label>
 	<div class="tab-content">
