--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -86,7 +86,7 @@ function openNav() {
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Small -->
 	<ins class="adsbygoogle"
-	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block"
 	data-ad-client="ca-pub-8489405167836126"
 	data-ad-slot="9196104101"
 	data-ad-format="auto"></ins>
@@ -158,7 +158,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -210,7 +210,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -269,7 +269,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -328,7 +328,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -387,7 +387,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -446,7 +446,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -505,7 +505,7 @@ function openNav() {
 	
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<ins class="adsbygoogle"
-	style="display:block; text-align:center; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block; text-align:center"
 	data-ad-layout="in-article"
 	data-ad-format="fluid"
 	data-ad-client="ca-pub-8489405167836126"
@@ -560,7 +560,7 @@ function openNav() {
 		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Small -->
 	<ins class="adsbygoogle"
-	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block"
 	data-ad-client="ca-pub-8489405167836126"
 	data-ad-slot="9196104101"
 	data-ad-format="auto"></ins>
@@ -593,7 +593,7 @@ function openNav() {
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Small -->
 	<ins class="adsbygoogle"
-	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block"
 	data-ad-client="ca-pub-8489405167836126"
 	data-ad-slot="9196104101"
 	data-ad-format="auto"></ins>
@@ -657,7 +657,7 @@ function openNav() {
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Small -->
 	<ins class="adsbygoogle"
-	style="display:block; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:6px;"
+	style="display:block"
 	data-ad-client="ca-pub-8489405167836126"
 	data-ad-slot="9196104101"
 	data-ad-format="auto"></ins>
