--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -362,7 +362,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>4 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">9</span>&nbsp;&nbsp;<span class="ball text-xl">11</span></td>
 	</tr>
 
 	<!-- EZ 2 - 9 PM -->
