--- a/results-and-winnings/Swertres-results.html
+++ b/results-and-winnings/Swertres-results.html
@@ -500,17 +500,17 @@ function openNav() {
   	
   	<div class="MyS" style="padding:16px; border:1px solid #ccc; border-radius:5px">
   	<h3 style="color:#4B77BE;">You May Also Like</h3>
-  	<p><a href="Swertres-November-2017.html" rel="bookmark" title="Swertres Results November 2017">Swertres Results November 2017</a></p>
-  	<p><a href="Swertres-October-2017.html" rel="bookmark" title="Swertres Results October 2017">Swertres Results October 2017</a></p>
-  	<p><a href="Swertres-September-2017.html" rel="bookmark" title="Swertres Results September 2017">Swertres Results September 2017</a></p>
-  	<p><a href="Swertres-August-2017.html" rel="bookmark" title="Swertres Results August 2017">Swertres Results August 2017</a></p>
-  	<p><a href="Swertres-July-2017.html" rel="bookmark" title="Swertres Results July 2017">Swertres Results July 2017</a></p>
-  	<p><a href="Swertres-June-2017.html" rel="bookmark" title="Swertres Results June 2017">Swertres Results June 2017</a></p>
-  	<p><a href="Swertres-May-2017.html" rel="bookmark" title="Swertres Results May 2017">Swertres Results May 2017</a></p>
-  	<p><a href="Swertres-April-2017.html" rel="bookmark" title="Swertres Results April 2017">Swertres Results April 2017</a></p>
-  	<p><a href="Swertres-March-2017.html" rel="bookmark" title="Swertres Results March 2017">Swertres Results March 2017</a></p>
-  	<p><a href="Swertres-February-2017.html" rel="bookmark" title="Swertres Results February 2017">Swertres Results February 2017</a></p>
-  	<p><a href="Swertres-January-2017.html" rel="bookmark" title="Swertres Results January 2017">Swertres Results January 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-November-2017.html" rel="bookmark" title="Swertres Results November 2017">Swertres Results November 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-October-2017.html" rel="bookmark" title="Swertres Results October 2017">Swertres Results October 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-September-2017.html" rel="bookmark" title="Swertres Results September 2017">Swertres Results September 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-August-2017.html" rel="bookmark" title="Swertres Results August 2017">Swertres Results August 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-July-2017.html" rel="bookmark" title="Swertres Results July 2017">Swertres Results July 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-June-2017.html" rel="bookmark" title="Swertres Results June 2017">Swertres Results June 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-May-2017.html" rel="bookmark" title="Swertres Results May 2017">Swertres Results May 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-April-2017.html" rel="bookmark" title="Swertres Results April 2017">Swertres Results April 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-March-2017.html" rel="bookmark" title="Swertres Results March 2017">Swertres Results March 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-February-2017.html" rel="bookmark" title="Swertres Results February 2017">Swertres Results February 2017</a></p>
+  	<p><a href="../Swertres-results/Swertres-January-2017.html" rel="bookmark" title="Swertres Results January 2017">Swertres Results January 2017</a></p>
   	</div><br></div>
 	</div>
 	
@@ -534,53 +534,53 @@ function openNav() {
 <div class="row footer" style="background:#2d89ef">
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Latest PCSO lotto results</b></h4>  
- <p><a href="results-and-winnings.html#58Result">Ultra lotto 6/58</a></p>
- <p><a href="results-and-winnings.html#55Result">Grand lotto 6/55</a></p>
- <p><a href="results-and-winnings.html#49Result">Super lotto 6/49</a></p>
- <p><a href="results-and-winnings.html#45Result">Mega lotto 6/45</a></p>
- <p><a href="results-and-winnings.html#42Result">Lotto 6/42</a></p>
- <p><a href="results-and-winnings.html#6DResult">6 Digit lotto</a></p>
- <p><a href="results-and-winnings.html#4DResult">4 Digit lotto</a></p>
- <p><a href="results-and-winnings.html#SwertresResult">Swertres lotto</a></p>
- <p><a href="results-and-winnings.html#EZ2Result">EZ 2 lotto</a></p>
+ <p><a href="../results-and-winnings.html#58Result">Ultra lotto 6/58</a></p>
+ <p><a href="../results-and-winnings.html#55Result">Grand lotto 6/55</a></p>
+ <p><a href="../results-and-winnings.html#49Result">Super lotto 6/49</a></p>
+ <p><a href="../results-and-winnings.html#45Result">Mega lotto 6/45</a></p>
+ <p><a href="../results-and-winnings.html#42Result">Lotto 6/42</a></p>
+ <p><a href="../results-and-winnings.html#6DResult">6 Digit lotto</a></p>
+ <p><a href="../results-and-winnings.html#4DResult">4 Digit lotto</a></p>
+ <p><a href="../results-and-winnings.html#SwertresResult">Swertres lotto</a></p>
+ <p><a href="../results-and-winnings.html#EZ2Result">EZ 2 lotto</a></p>
 </div>
 
 <div class="side">
 	<h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>PCSO lotto & games</b></h4>  
-  	<p><a href="pcso-lotto-and-games/Ultra-lotto-6-58.html">Ultra lotto 6/58</a></p>
-  	<p><a href="pcso-lotto-and-games/Grand-lotto-6-55.html">Grand lotto 6/55</a></p>
-	<p><a href="pcso-lotto-and-games/Super-lotto-6-49.html">Super lotto 6/49</a></p>
-	<p><a href="pcso-lotto-and-games/Mega-Lotto-6-45.html">Mega lotto 6/45</a></p>
-	<p><a href="pcso-lotto-and-games/lotto-6-42.html">Lotto 6/42</a></p>
-	<p><a href="pcso-lotto-and-games/6-Digit-Game.html">6 Digit lotto</a></p>
-	<p><a href="pcso-lotto-and-games/4-Digit-Game.html">4 Digit lotto</a></p>
-	<p><a href="pcso-lotto-and-games/Swertres.html">Swertres lotto</a></p>
-	<p><a href="pcso-lotto-and-games/EZ-2.html">EZ 2 lotto</a></p>
+  	<p><a href="../pcso-lotto-and-games/Ultra-lotto-6-58.html">Ultra lotto 6/58</a></p>
+  	<p><a href="../pcso-lotto-and-games/Grand-lotto-6-55.html">Grand lotto 6/55</a></p>
+	<p><a href="../pcso-lotto-and-games/Super-lotto-6-49.html">Super lotto 6/49</a></p>
+	<p><a href="../pcso-lotto-and-games/Mega-Lotto-6-45.html">Mega lotto 6/45</a></p>
+	<p><a href="../pcso-lotto-and-games/lotto-6-42.html">Lotto 6/42</a></p>
+	<p><a href="../pcso-lotto-and-games/6-Digit-Game.html">6 Digit lotto</a></p>
+	<p><a href="../pcso-lotto-and-games/4-Digit-Game.html">4 Digit lotto</a></p>
+	<p><a href="../pcso-lotto-and-games/Swertres.html">Swertres lotto</a></p>
+	<p><a href="../pcso-lotto-and-games/EZ-2.html">EZ 2 lotto</a></p>
 </div>
 
 <div class="side">
 <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Previous draw results</b></h4>  
- <p><a href="results-and-winnings/Ultra-lotto-6-58-results.html">Ultra lotto 6/58</a></p>
- <p><a href="results-and-winnings/Grand-lotto-6-55-results.html">Grand lotto 6/55</a></p>
- <p><a href="results-and-winnings/Super-lotto-6-49-results.html">Super lotto 6/49</a></p>
- <p><a href="results-and-winnings/Mega-lotto-6-45-results.html">Mega lotto 6/45</a></p>
- <p><a href="results-and-winnings/PCSO-lotto-6-42-results.html">Lotto 6/42</a></p>
- <p><a href="results-and-winnings/6-Digit-Game-results.html">6 Digit lotto</a></p>
- <p><a href="results-and-winnings/4-Digit-Game-results.html">4 Digit lotto</a></p>
- <p><a href="results-and-winnings/Swertres-results.html">Swertres lotto</a></p>
- <p><a href="results-and-winnings/EZ-2-lotto-results.html">EZ 2 lotto</a></p>
+ <p><a href="../results-and-winnings/Ultra-lotto-6-58-results.html">Ultra lotto 6/58</a></p>
+ <p><a href="../results-and-winnings/Grand-lotto-6-55-results.html">Grand lotto 6/55</a></p>
+ <p><a href="../results-and-winnings/Super-lotto-6-49-results.html">Super lotto 6/49</a></p>
+ <p><a href="../results-and-winnings/Mega-lotto-6-45-results.html">Mega lotto 6/45</a></p>
+ <p><a href="../results-and-winnings/PCSO-lotto-6-42-results.html">Lotto 6/42</a></p>
+ <p><a href="../results-and-winnings/6-Digit-Game-results.html">6 Digit lotto</a></p>
+ <p><a href="../results-and-winnings/4-Digit-Game-results.html">4 Digit lotto</a></p>
+ <p><a href="../results-and-winnings/Swertres-results.html">Swertres lotto</a></p>
+ <p><a href="../results-and-winnings/EZ-2-lotto-results.html">EZ 2 lotto</a></p>
 </div>
 
 <div class="side">
  <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Site Map</b></h4>
- <p><a href="Index.html">Home</a></p>
- <p><a href="PCSO-Lotto-and-Games.html">PCSO Lotto & Games</a></p>
- <p><a href="results-and-winnings.html">Results & Winnings</a></p>
+ <p><a href="../Index.html">Home</a></p>
+ <p><a href="../PCSO-Lotto-and-Games.html">PCSO Lotto & Games</a></p>
+ <p><a href="../results-and-winnings.html">Results & Winnings</a></p>
  <p><a href="">FAQs</a></p>
  <br>
  <h4 style="text-transform:uppercase; color: #EEEEEE; font-size:14px"><b>Lotto Info Philippines</b></h4>
- <p><a href="">About Us</a></p>
- <p><a href="">Contact Us</a></p>
+ <p><a href="../Index.html">About Us</a></p>
+ <p><a href="mailto:hello@lottoinfo.ph">Contact Us</a></p>
 </div>
 </div>
 
