--- a/results-and-winnings/EZ-2-lotto-results.html
+++ b/results-and-winnings/EZ-2-lotto-results.html
@@ -28,6 +28,14 @@
  <link rel="manifest" href="../manifest.json">
  <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
 
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8489405167836126",
+    enable_page_level_ads: true
+  });
+</script>
+	
 <style>
 * {box-sizing: border-box;} body {margin:0;} ul a {color:#2d89ef;} .side a {font-family:Arial} .footer a {color:#EEEEEE; font-size:13px; text-decoration:none}
 @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} body, a {font-family:mFont;} .capital {text-transform:uppercase} h1{font-size:28px} h2{font-size:24px} h3{font-size:22px} h4{font-size:20px}
@@ -82,6 +90,16 @@ function openNav() {
 	</nav>
 <div class="row" style="max-width:1200px; margin:auto">
 	<div class="main">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 	
 	<h1 class="capital" style="color:#4B77BE"><strong>EZ2 Lotto Results</strong></h1>
 	
@@ -465,6 +483,17 @@ function openNav() {
 	</div>
     
   	<div class="side">
+		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   	
     </div>
 	</div>
@@ -527,6 +556,17 @@ function openNav() {
  <p><a href="mailto:hello@lottoinfo.ph">Contact Us</a></p>
 </div>
 </div>
+	
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Small -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="9196104101"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <div style="background:#2d89ef; border-top: 1px solid #FBFCFC; display:table; clear:both; padding:0; text-align:center; width:100%;">
 <h4 style="color:#EEEEEE; font-size:15px"><b>&copy; Lotto Info Philippines</b></h4>
