--- a/results-and-winnings.html
+++ b/results-and-winnings.html
@@ -169,7 +169,7 @@ function openNav() {
 	<div class="half">
 	<div class="jackpot">
 	<h4>Jackpot Prize : &#8369;121,795,296</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="55Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Ultra-lotto-6-58-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -211,7 +211,7 @@ function openNav() {
 	<div class="half">
 	<div class="jackpot">
 	<h4>Jackpot Prize : &#8369;15,840.000</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="45Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Super-lotto-6-49-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -263,7 +263,7 @@ function openNav() {
 	<div class="half">
 	<div class="jackpot">
 	<h4>Jackpot Prize : &#8369;26,855,390</h4>
-	<h4>Number of Winners : ?</h4>
+	<h4>Number of Winners : 0</h4>
 	</div><a name="SwertresResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/PCSO-lotto-6-42-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
 	<br>
@@ -307,7 +307,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">8</span>&nbsp;&nbsp;<span class="ball text-xl">3</span></td>
 	</tr>
 	</table><a name="EZ2Result"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/Swertres-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -362,7 +362,7 @@ function openNav() {
 
 	<tr>
 	<td class="yf" style="text-align:center; vertical-align:middle;"><b>9 PM</b></td>
-	<td><span class="ball text-xl">?</span>&nbsp;&nbsp;<span class="ball text-xl">?</span></td>
+	<td><span class="ball text-xl">2</span>&nbsp;&nbsp;<span class="ball text-xl">29</span></td>
 	</tr>
 	</table><a name="4DResult"></a>
 	<h4 style="text-align:center;"><a href="results-and-winnings/EZ-2-lotto-results.html" class="button" style="background:#2d89ef; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12); border-radius:4px">view previous results</a></h4>
@@ -399,7 +399,7 @@ function openNav() {
 	<br>
 	<img src="images/6-Digit.png" alt="PCSO 6-Digit Game result"style="width:60%;max-width:120px;">
 	<h2 class="yf"><span itemprop="entry-title"><strong>6-Digit Game result</strong></span></h2>
-	<h4><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span><span class="ball">?</span></h4>
+	<h4><span class="ball">3</span><span class="ball">6</span><span class="ball">2</span><span class="ball">6</span><span class="ball">9</span><span class="ball">3</span></h4>
 	<h4 class="yf"><span itemprop="entry-content"><b>December 5, 2017</b></span></h4>
 	</div>
 	<div class="half">
