--- a/results-and-winnings/Ultra-lotto-6-58-results.html
+++ b/results-and-winnings/Ultra-lotto-6-58-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+	<input id="dec5" type="radio" name="t">
+	<label for="dec5">December 5, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">39</span><span class="ball text-xl">57</span><span class="ball text-xl">1</span><span class="ball text-xl">20</span><span class="ball text-xl">40</span><span class="ball text-xl">22</span></p>
+	<h4>Jackpot Prize : &#8369;121,795,296</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     <div class="tab blue">
      <input id="Dec3" type="radio" name="t">
      <label for="Dec3">December 3, 2017</label>
      <div class="tab-content">
