--- a/results-and-winnings/Super-lotto-6-49-results.html
+++ b/results-and-winnings/Super-lotto-6-49-results.html
@@ -143,6 +143,17 @@ function closeNav() {
      
      <div class="row fr">
 	     <div class="tab blue">
+	<input id="dec5" type="radio" name="t">
+	<label for="dec5">December 5, 2017</label>
+	<div class="tab-content">
+	<div class="jackpot">
+	<p style="text-align:center"><span class="ball text-xl">19</span><span class="ball text-xl">21</span><span class="ball text-xl">23</span><span class="ball text-xl">17</span><span class="ball text-xl">25</span><span class="ball text-xl">37</span></p>
+	<h4>Jackpot Prize : &#8369;15,840.000</h4>
+	<h4>Number of Winners : 0</h4>
+	</div>
+	</div>
+	</div>
+	     <div class="tab blue">
      <input id="Dec3" type="radio" name="t">
      <label for="Dec3">December 3, 2017</label>
      <div class="tab-content">
